# cpp_template

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: hello_world.h
include/sample/: sample.h
source/: hello_world.cpp  main.cpp  sample.cpp
src/: hello_world.cpp  main.cpp
src/sample/: sample.cpp
